--- a/openjweb-starter/oss-openjweb-starter/pom.xml
+++ b/openjweb-starter/oss-openjweb-starter/pom.xml
@@ -27,7 +27,7 @@
         <url/>
     </scm>
     <properties>
-        <java.version>23</java.version>
+        <java.version>${java.version}</java.version>
     </properties>
     <dependencies>
         <dependency>
