--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,8 @@
         <module>openjweb-weixin</module>
         <module>openjweb-starter</module>
         <module>openjweb-core</module>
+        <module>openjweb-b2c</module>
+        <module>openjweb-cms</module>
     </modules>
     <dependencies>
         <dependency>
