--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,9 @@
     </scm>
     <properties>
         <java.version>1.8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+
     </properties>
     <modules>
         <module>openjweb-common</module>
