--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <java.version>1.8</java.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <lombok.version>1.18.2</lombok.version>
 
     </properties>
     <modules>
@@ -54,6 +55,32 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.83</version>
+        </dependency>
+
+        <!--    lombok    -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+        </dependency>
+
+
+        <!--   knife4j     -->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <!--<artifactId>knife4j-spring-boot-starter</artifactId>
+            <version>2.0.4</version>-->
+            <artifactId>knife4j-openapi2-spring-boot-starter</artifactId>
+            <version>4.4.0</version>
+
+        </dependency>
+
+
     </dependencies>
 
     <build>
