JdbcTemplate数据库开发示例

--- a/openjweb-sys/pom.xml
+++ b/openjweb-sys/pom.xml
@@ -43,6 +43,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.openjweb</groupId>
+            <artifactId>datasource-openjweb-starter</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <build>
