--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <lombok.version>1.18.2</lombok.version>
+        <mysql.connector.version>8.0.27</mysql.connector.version>
 
     </properties>
     <modules>
@@ -79,6 +80,22 @@
             <version>4.4.0</version>
 
         </dependency>
+
+        <!--druid-->
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.23</version>
+        </dependency>
+        <!--jdbc-->
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+
+        </dependency>
+
 
 
     </dependencies>
