--- a/pom.xml
+++ b/pom.xml
@@ -81,13 +81,6 @@
 
         </dependency>
 
-        <!--druid-->
-
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
-            <version>1.1.23</version>
-        </dependency>
         <!--jdbc-->
 
         <dependency>
@@ -95,6 +88,24 @@
             <artifactId>spring-boot-starter-jdbc</artifactId>
 
         </dependency>
+
+
+        <!--druid-->
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <!--<version>1.1.23</version>-->
+            <version>1.2.10</version>
+        </dependency>
+
+        <!--for druid log-->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+
 
 
 
