--- a/openjweb-starter/datasource-openjweb-starter/pom.xml
+++ b/openjweb-starter/datasource-openjweb-starter/pom.xml
@@ -41,13 +41,17 @@
             <scope>test</scope>
         </dependency>
 
-
-
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.connector.version}</version>
             <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openjweb</groupId>
+            <artifactId>openjweb-core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
