--- a/openjweb-sys/pom.xml
+++ b/openjweb-sys/pom.xml
@@ -50,6 +50,12 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.openjweb</groupId>
+            <artifactId>openjweb-core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <build>
