--- a/pom.xml
+++ b/pom.xml
@@ -113,10 +113,11 @@
 
     <build>
         <plugins>
-            <plugin>
+            <!--dont add here -->
+            <!--<plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
+            </plugin>-->
 
             <!--ignore test failure-->
 
