--- a/openjweb-core/pom.xml
+++ b/openjweb-core/pom.xml
@@ -42,6 +42,14 @@
         </dependency>-->
     </dependencies>
 
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
+    </build>
+
 
 
 
