--- a/openjweb-sys/src/main/resources/application-dev.yml
+++ b/openjweb-sys/src/main/resources/application-dev.yml
@@ -30,4 +30,25 @@ spring:
       url: jdbc:mysql://localhost:3306/erp
       username: root
       password: root
+  redis:
+    database: 0
+    host: 127.0.0.1
+    port: 63899
+    password: 123456
 
+    timeout: 1800000
+    jedis:
+      pool:
+        enabled: true
+        max-active: 8
+        max-idle: 8
+        max-wait: -1ms
+        min-idle: 0
+    lettuce:
+      pool:
+        #
+        max-wait: -1
+        #
+        max-idle: 5
+        min-idle: 0
+        max-active: 20
