--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <lombok.version>1.18.2</lombok.version>
         <mysql.connector.version>8.0.27</mysql.connector.version>
+        <spring-boot.version>2.7.18</spring-boot.version>
 
     </properties>
     <modules>
