--- a/openjweb-starter/datasource-openjweb-starter/pom.xml
+++ b/openjweb-starter/datasource-openjweb-starter/pom.xml
@@ -54,6 +54,19 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.5.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-extension</artifactId>
+            <version>3.5.2</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
