--- a/openjweb-sys/pom.xml
+++ b/openjweb-sys/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>openjweb-core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjweb</groupId>
+            <artifactId>openjweb-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 
 
 
