修改pom导致的sys中引入 common包失败

--- a/openjweb-sys/pom.xml
+++ b/openjweb-sys/pom.xml
@@ -65,6 +65,7 @@
             <groupId>org.openjweb</groupId>
             <artifactId>openjweb-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <!--<scope>compile</scope>-->
         </dependency>
 
 
