--- a/openjweb-common/pom.xml
+++ b/openjweb-common/pom.xml
@@ -28,7 +28,7 @@
     <properties>
         <java.version>1.8</java.version>
     </properties>
-    <dependencies>
+    <!--<dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
@@ -48,6 +48,6 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
-    </build>
+    </build>-->
 
 </project>
