增加了thymeleaf框架

--- a/openjweb-sys/src/main/resources/application-dev.yml
+++ b/openjweb-sys/src/main/resources/application-dev.yml
@@ -52,3 +52,11 @@ spring:
         max-idle: 5
         min-idle: 0
         max-active: 20
+  thymeleaf:
+    mode: HTML5
+    encoding: UTF-8
+    content: text/html
+    cache: false
+    prefix: classpath:/templates/
+
+
