--- a/openjweb-sys/pom.xml
+++ b/openjweb-sys/pom.xml
@@ -67,6 +67,12 @@
             <version>0.0.1-SNAPSHOT</version>
             <!--<scope>compile</scope>-->
         </dependency>
+        <dependency>
+            <groupId>org.openjweb</groupId>
+            <artifactId>openjweb-cms</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <!--<scope>compile</scope>-->
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -83,12 +89,6 @@
         </dependency>-->
         <!---retry end -->
 
-
-
-
-
-
-
     </dependencies>
 
     <build>
@@ -98,8 +98,6 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
-
-
     </build>
 
 </project>
