--- a/openjweb-cms/pom.xml
+++ b/openjweb-cms/pom.xml
@@ -2,7 +2,32 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
 
+        <dependency>
+            <groupId>org.openjweb</groupId>
+            <artifactId>openjweb-core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+
+    </dependencies>
     <parent>
         <groupId>org.openjweb</groupId>
         <artifactId>openjweb-cloud</artifactId>
@@ -27,56 +52,8 @@
         <url/>
     </scm>
     <properties>
-        <java.version>${java.version}</java.version>
+        <java.version>1.8</java.version>
     </properties>
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.tomcat.embed</groupId>
-            <artifactId>tomcat-embed-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-        </dependency>
-       <!-- <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>-->
-
-        <!--<dependency>
-            <groupId>org.openjweb</groupId>
-            <artifactId>openjweb-sys</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openjweb</groupId>
-            <artifactId>openjweb-core</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>-->
-        <!--<dependency>
-           <groupId>org.openjweb</groupId>
-           <artifactId>redis-openjweb-starter</artifactId>
-           <version>0.0.1-SNAPSHOT</version>
-           <scope>compile</scope>
-       </dependency>
-
-      <dependency>
-           <groupId>org.springframework.boot</groupId>
-           <artifactId>spring-boot-starter-web</artifactId>
-       </dependency>-->
-
-    </dependencies>
-
 
 
 </project>
