--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
         <module>openjweb-core</module>
         <module>openjweb-b2c</module>
         <module>openjweb-cms</module>
+        <module>openjweb-sns</module>
     </modules>
     <dependencies>
         <dependency>
