--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
         <module>openjweb-weixin</module>
         <module>openjweb-starter</module>
         <module>openjweb-core</module>
-        <module>openjweb-b2c</module>
+        <module>openjweb-b2b2c</module>
         <module>openjweb-cms</module>
         <module>openjweb-sns</module>
     </modules>
