增加mybatis-plus相关代码

--- a/openjweb-sys/src/main/resources/application.properties
+++ b/openjweb-sys/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=openjweb-sys
+#mybatis.mapper-locations=classpath*:**/mapper/mapping/*.xml
+#mybatis.type-aliases-package=org.openjweb.sys.mapper
+mybatis-plus.mapper-locations=classpath*:**/mapper/mapping/*.xml
+
