--- a/openjweb-sys/src/main/resources/application-dev.yml
+++ b/openjweb-sys/src/main/resources/application-dev.yml
@@ -59,4 +59,6 @@ spring:
     cache: false
     prefix: classpath:/templates/
 
-
+#mybatis:
+  #mapper-locations: classpath:/mappers/*Mapper.xml
+  #type-aliases-package: org.openjweb.sys.entity
