--- a/openjweb-sys/src/main/resources/application.properties
+++ b/openjweb-sys/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.application.name=openjweb-sys
 #mybatis.mapper-locations=classpath*:**/mapper/mapping/*.xml
 #mybatis.type-aliases-package=org.openjweb.sys.mapper
 mybatis-plus.mapper-locations=classpath*:**/mapper/mapping/*.xml
-
+#mybatis.mapper-locations=classpath*:**/mapper/mapping/*.xml
