--- a/openjweb-sys/pom.xml
+++ b/openjweb-sys/pom.xml
@@ -45,6 +45,14 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+
+
+        <dependency>
             <groupId>org.openjweb</groupId>
             <artifactId>datasource-openjweb-starter</artifactId>
             <version>0.0.1-SNAPSHOT</version>
@@ -55,6 +63,8 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+
+
 
         <dependency>
             <groupId>org.openjweb</groupId>
