--- a/pom.xml
+++ b/pom.xml
@@ -66,12 +66,12 @@
             <version>1.2.83</version>
         </dependency>
 
-        <!--    lombok    -->
-        <dependency>
+        <!--    lombok  ，改到openjweb-common中  -->
+        <!--<dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
-        </dependency>
+        </dependency>-->
 
 
         <!--   knife4j     -->
