--- a/openjweb-common/pom.xml
+++ b/openjweb-common/pom.xml
@@ -49,6 +49,16 @@
             <version>1.15</version>
         </dependency>
 
+
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+
+
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
