--- a/openjweb-core/pom.xml
+++ b/openjweb-core/pom.xml
@@ -63,6 +63,20 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
+        <!--for springsecurity encrypt start-->
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+        </dependency>
+
+        <!--for springsecurity encrypt end-->
+
+
 
         <!--<dependency>
             <groupId>org.mybatis.spring.boot</groupId>
