增加了SpringSecurity 登录，mybatis-plus等

--- a/openjweb-sys/src/main/resources/application-dev.yml
+++ b/openjweb-sys/src/main/resources/application-dev.yml
@@ -66,8 +66,8 @@ jwt:
 md5:
   salt: wsxedcqazsxdcrfvgtbyhglkgmgvog1s
 
-security:
-  rsa:
+aes:
+  key: /Z3E1YW1mxM0BCluJdYaLHCnhTuzE8j0
 
 #mybatis:
   #mapper-locations: classpath:/mappers/*Mapper.xml
