--- a/openjweb-core/pom.xml
+++ b/openjweb-core/pom.xml
@@ -48,6 +48,8 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+
+
         <!-- springboot security -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -61,6 +63,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
         </dependency>
 
         <!--for springsecurity encrypt start-->
