--- a/openjweb-sys/src/main/resources/application-dev.yml
+++ b/openjweb-sys/src/main/resources/application-dev.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     ds1:
       type: com.alibaba.druid.pool.DruidDataSource
-      url: jdbc:mysql://localhost:3306/erp
+      url: jdbc:mysql://localhost:3306/erp?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
       username: root
       password: root
       #for druid
@@ -27,7 +27,7 @@ spring:
 
     ds2:
       type: com.alibaba.druid.pool.DruidDataSource
-      url: jdbc:mysql://localhost:3306/erp
+      url: jdbc:mysql://localhost:3306/erp?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
       username: root
       password: root
   redis:
