--- a/openjweb-common/pom.xml
+++ b/openjweb-common/pom.xml
@@ -39,10 +39,10 @@
             <version>3.12.0</version> <!--3.11 is error-->
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
