--- a/openjweb-sys/pom.xml
+++ b/openjweb-sys/pom.xml
@@ -50,6 +50,17 @@
             <optional>true</optional>
         </dependency>
 
+        <!--<dependency>
+            <groupId>org.springframework.security.oauth.boot</groupId>
+            <artifactId>spring-security-oauth2-autoconfigure</artifactId>
+            <version>2.1.3.RELEASE</version>
+        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.security.oauth.boot</groupId>
+            <artifactId>spring-security-oauth2-autoconfigure</artifactId>
+            <version>2.1.3.RELEASE</version>
+        </dependency>
+
 
 
         <dependency>
