--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,13 @@
             <version>2.1</version>
         </dependency>
 
+        <!--for pinyin -->
+        <dependency>
+            <groupId>net.sourceforge.pinyin4j</groupId>
+            <artifactId>pinyin4j</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+
 
 
 
