--- a/openjweb-sys/pom.xml
+++ b/openjweb-sys/pom.xml
@@ -113,6 +113,14 @@
             <scope>compile</scope>
 
         </dependency>
+        <dependency>
+            <groupId>org.openjweb</groupId>
+            <artifactId>mq-openjweb-starter</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
