--- a/openjweb-core/pom.xml
+++ b/openjweb-core/pom.xml
@@ -141,6 +141,14 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.openjweb</groupId>
+            <artifactId>mq-openjweb-starter</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+
+        </dependency>
+
 
 
     </dependencies>
