--- a/openjweb-sys/src/main/resources/application-dev.yml
+++ b/openjweb-sys/src/main/resources/application-dev.yml
@@ -73,6 +73,18 @@ aes:
 oauth2:
   server: true
 
+logging:
+  file:
+    name: d:/tmp/openjweb.log
+
+mq:
+  rabbit:
+    namePrefix: openjweb-cloud
+    host: 127.0.0.1:5672
+    username: guest
+    password: guest
+
+
 #mybatis:
   #mapper-locations: classpath:/mappers/*Mapper.xml
   #type-aliases-package: org.openjweb.sys.entity
