增加了freemarker模版引擎

--- a/openjweb-sys/src/main/resources/application.properties
+++ b/openjweb-sys/src/main/resources/application.properties
@@ -3,3 +3,15 @@ spring.application.name=openjweb-sys
 #mybatis.type-aliases-package=org.openjweb.sys.mapper
 mybatis-plus.mapper-locations=classpath*:**/mapper/mapping/*.xml
 #mybatis.mapper-locations=classpath*:**/mapper/mapping/*.xml
+
+spring.freemarker.allow-request-override=false
+spring.freemarker.allow-session-override=false
+spring.freemarker.cache=false
+spring.freemarker.charset=UTF-8
+spring.freemarker.check-template-location=true
+spring.freemarker.content-type=text/html; charset=utf-8
+spring.freemarker.expose-request-attributes=false
+spring.freemarker.expose-session-attributes=false
+spring.freemarker.suffix=.ftl
+spring.freemarker.template-loader-path=classpath:/templates/
+
