基于SpringBOOT的邮件发送

--- a/openjweb-core/pom.xml
+++ b/openjweb-core/pom.xml
@@ -161,11 +161,16 @@
             <version>1.5.4</version>
         </dependency>
 
-        <!--<dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
 
-        </dependency>-->
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
 
 
 
