--- a/openjweb-sys/pom.xml
+++ b/openjweb-sys/pom.xml
@@ -119,11 +119,11 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
-
-        <dependency>
+        <!--move to core-->
+        <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
+        </dependency>-->
 
         <!-- shedlock依赖 -->
         <dependency>
