Beetl国际化的实现

--- a/openjweb-sys/src/main/resources/application-dev.yml
+++ b/openjweb-sys/src/main/resources/application-dev.yml
@@ -107,7 +107,7 @@ mq:
 beetl:
   suffix: html
   #if use userdefine path
-  #fileTemplatesPath: D:/tmp/beetl/templates
+  fileTemplatesPath: D:/tmp/beetl/templates
 
 
 
