--- a/openjweb-core/pom.xml
+++ b/openjweb-core/pom.xml
@@ -200,7 +200,7 @@
         <dependency>
             <groupId>com.ibeetl</groupId>
             <artifactId>beetl-framework-starter</artifactId>
-            <version>1.2.28.RELEASE</version>
+            <version>1.2.40.Beetl.RELEASE</version><!--1.2.28.RELEASE-->
         </dependency>
 
 
