基于comm_table_def和comm_column_def的低代码开发

--- a/openjweb-sys/src/main/resources/application-dev.yml
+++ b/openjweb-sys/src/main/resources/application-dev.yml
@@ -109,6 +109,11 @@ beetl:
   #if use userdefine path
   fileTemplatesPath: D:/tmp/beetl/templates
 
+openjweb:
+  dev:
+    javaTemplatePath: D:/project/openjweb-cloud/openjweb-dev/src/main/resources/templates
+    rootProjectPath: D:/project/openjweb-cloud
+
 
 
 #mybatis:
