基于comm_table_def和comm_column_def的低代码开发

--- a/openjweb-sys/src/main/resources/application-dev.yml
+++ b/openjweb-sys/src/main/resources/application-dev.yml
@@ -113,6 +113,8 @@ openjweb:
   dev:
     javaTemplatePath: D:/project/openjweb-cloud/openjweb-dev/src/main/resources/templates
     rootProjectPath: D:/project/openjweb-cloud
+    isCreateVue: true
+    vuePath: D:/vue-admin20240926
 
 
 
