--- a/openjweb-sys/src/main/resources/application.properties
+++ b/openjweb-sys/src/main/resources/application.properties
@@ -15,5 +15,9 @@ spring.freemarker.expose-session-attributes=false
 spring.freemarker.suffix=.ftl
 spring.freemarker.template-loader-path=classpath:/templates/
 
+#spring.resources.static-locations=file:d:/tmp/beetl/templates/,classpath:/static/
+#permit all static resources
+#spring.resources.add-mappings=false
+
 
 
