--- a/openjweb-sys/src/main/resources/application-prod-v2.yml
+++ b/openjweb-sys/src/main/resources/application-prod-v2.yml
@@ -118,6 +118,10 @@ openjweb:
     isCreateVue: true
     vuePath: D:/vue-admin20240926
 
+lucene:
+  cmsDir: d:/lucene/cms
+  b2cDir: d:/lucene/b2c
+
 
 
 #mybatis:
