--- a/openjweb-sys/src/main/resources/application-dev.yml
+++ b/openjweb-sys/src/main/resources/application-dev.yml
@@ -119,6 +119,7 @@ openjweb:
     rootProjectPath: D:/project/openjweb-cloud
     isCreateVue: true
     vuePath: D:/vue-admin20240926
+    vueMenuTemplatePath: D:/project/openjweb/webapps/WEB-INF/config/menu-vue-v2.js
 
 lucene:
   cmsDir: d:/lucene/cms
